# RegistrationResolver

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: rust.yml
config/: Cargo.toml
config/src/: db_config.rs  kafka_config.rs  lib.rs
notification_service/: Cargo.toml
notification_service/src/: lib.rs  main.rs
notification_service/src/model/: approve_result.rs  mod.rs
notification_service/tests/: notification_service_test.rs
registration_service/: Cargo.toml
registration_service/migrations/2022-07-25-085948_create_user/: up.sql
registration_service/src/: lib.rs  main.rs  schema.rs
registration_service/src/config/: kafka_config.rs  mod.rs
registration_service/src/handler/: register_handler.rs
registration_service/src/model/: user.rs
registration_service/tests/: register_handler.rs
resolver_service/: Cargo.toml
resolver_service/src/: lib.rs  main.rs
resolver_service/src/model/: approve_result.rs  mod.rs  user.rs
resolver_service/tests/: resolver_service_test.rs
