[package]
name = "registration_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
rdkafka = { version = "0.25", features = ["cmake-build"] }
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.4"