[package]
name = "registration_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {path = "../config"}
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
rdkafka = { version = "0.25", features = ["cmake-build"] }
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.4"
diesel = {version = "1.4.8", features = ["postgres"]}
tracing-actix-web = "0.6"
bcrypt = "0.13.0"
testcontainers = "0.14.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
diesel_migrations = "1.4.0"