[package]
name = "resolver_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {path ="../config"}
rdkafka = { version = "0.25", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
rand = "0.8.5"
testcontainers = "0.14.0"